--- a/src/main/resources/templates/customerCenter/faq.html
+++ b/src/main/resources/templates/customerCenter/faq.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>소통하고 전달하기 - 텀블벅 헬프센터</title>
     <link rel="stylesheet" href="../../static/css/customerCenter/faq.css">
+    <link rel="stylesheet" href="/static/css/font/font.css">
+
 </head>
 <body>
     <div class="full-screen">
@@ -38,13 +40,13 @@
                             <h2 class="page_header_h2">소통하고 전달하기</h2>
                         </header>
                         <ul class="article_list">
-                            <li class="article_list_item article_promoted">
+                            <!-- <li class="article_list_item article_promoted">
                                 <a class="article_list_link">
                                     모금액은 언제 정산되나요?
                                 </a>
-                            </li>
+                            </li> -->
                             <li class="article_list_item article_promoted">
-                                <a class="article_list_link">
+                                <a class="article_list_link" href="/templates/customerCenter/faq-detail.html">
                                     펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?
                                 </a>
                             </li>
