--- a/src/main/resources/templates/volunteer-work/work-list.html
+++ b/src/main/resources/templates/volunteer-work/work-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>심봉사 | 봉사 모집 게시판</title>
+    <title>심봉사 | 봉사 목록</title>
     <link rel="stylesheet" href="../../static/css/community/service-board.css">
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
