봉사 상세보기 수정

--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -402,26 +402,26 @@
                             </div>
                             
                             
-                            <div class="company-data">
+                                <div class="company-data">
                                         <dl class="name">
                                             <dt>담당자명 :</dt>
-                                            <dd>최현희</dd>
+                                            <dd>황자현</dd>
                                         </dl>
                                         <dl class="tel">
                                             <dt>전화번호 :</dt>
-                                            <dd>02-3010-4066</dd>
+                                            <dd>010-5121-3284</dd>
                                         </dl>
-                                        <dl class="fax">
+                                       <!--  <dl class="fax">
                                             <dt>FAX :</dt>
                                             <dd>02-2045-4036</dd>
-                                        </dl>
+                                        </dl> -->
                                         <dl class="addr">
                                             <dt>주소 :</dt>
-                                            <dd id="dataAdres">서울특별시 송파구 올림픽로43길 88 서울아산병원</dd>
+                                            <dd>서울특별시 송파구 올림픽로43길</dd>
                                         </dl>
-                                    </div>
                                 </div>
                             </div>
+                        </div>
                             
                             
                     </div>
