--- a/src/main/resources/static/css/volunteer-work/work-detail.css
+++ b/src/main/resources/static/css/volunteer-work/work-detail.css
@@ -179,7 +179,8 @@ dl {
 .company-data dl {
     /* display: inline-block; */
     float: left;
-    width: 33.33%;
+   /*  width: 33.33%; */
+   margin-left: 30px;
 }
 
 .company-data dt {
@@ -197,22 +198,22 @@ dl {
     position: absolute;
     width: 12px;
     height: 12px;
-    top: 6px;
+    top: 0px;
     left: 0;
     overflow: hidden;
     background: url(https://www.1365.go.kr/web/vols/images/ico/ico_bul1.png) left center no-repeat;
 }
 
-.company-data dl:after {
+/* .company-data dl:after {
     display: block;
     clear: both;
     content: "";
-}
+} */
 
 .company-data dd {
     display: inline-block;
     font-size: 15px;
 }
-.company-info-map {
+/* .company-info-map {
     position: relative;
-}
+} */
