--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -154,7 +154,7 @@
                                         <a href="javascript:;" id="skipBtn" style="float: right;">지도 건너뛰기</a>
                                         
                                         
-                                        <div id="map" style="position: relative; overflow: hidden; background: url(&quot;https://t1.daumcdn.net/mapjsapi/images/bg_tile.png&quot;);">
+                                        <!-- <div id="map" style="position: relative; overflow: hidden; background: url(&quot;https://t1.daumcdn.net/mapjsapi/images/bg_tile.png&quot;);">
                                             <div style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; touch-action: none; cursor: url(&quot;https://t1.daumcdn.net/mapjsapi/images/cursor/openhand.cur.ico&quot;) 7 5, url(&quot;https://t1.daumcdn.net/mapjsapi/images/cursor/openhand.cur.ico&quot;), default;">
                                             <div style="position: absolute;">
                                             <div style="position: absolute; z-index: 1; left: 0px; top: 0px;">
@@ -220,12 +220,12 @@
                                                         <img src="https://t1.daumcdn.net/mapjsapi/images/m_bi_b.png" alt="Kakao 지도로 이동" style="float: left; width: 32px; height: 10px; border: none;"></a>
                                                         <div style="font: 11px / 11px Arial, Tahoma, Dotum, sans-serif; float: left;">
                                             
-                                            </div>
+                                                        </div>
                                         </div>
                                         </div>
                                         <div style="cursor: auto; position: absolute; z-index: 2; left: 0px; top: 0px;">
-                                        </div>
-                                    </div>
+                                        </div> -->
+                                    <!-- </div> -->
                                         <!-- <script type="text/javascript">
                                             //중심좌표는 다시 한 번 확인해서 잡아줄것
                                             var mapContainer = document.getElementById('map'), // 지도를 표시할 div
