--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 봉사 목록</title>
-    <link rel="stylesheet" href="../../static/css/community/service-board.css">
+    <link rel="stylesheet" href="../../static/css/volunteer-work/work.css">
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
     <link rel="stylesheet" href="../../static/css/main/footer.css">
@@ -31,12 +31,17 @@
                     </div>
                 </section>
                 <section class="service-info">
-                    <h4 class="service-header">
-                        <a href="#">진행 중인 봉사 정보</a>
-                    </h4>
+                    <div class="items-info-layout">
+                        <div class="items-buttons">
+                        <h4 class="service-header">
+                            진행 중인 봉사 정보
+                        </h4>
+                            <button type="button" class="button">지원</button>
+                        </div>
+                    </div>
                     <!--  -->
-                    <div style="display: flex; margin-bottom: 10px;">
-                        <div class="service-items">
+                    <div>
+                        <!-- <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
                                     <div class="name">심봉사(SimBongSa)</div>
@@ -53,29 +58,33 @@
                                     <a class="button">지원 ></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
+                                    <div class="name">
+                                        <span class="cruit">[모집중]</span>
+                                        [마감 <span class="last-date-text">3</span> 일전]
+                                    </div>
                                     <div class="title">서울시 환경정화 봉사자 모집</div>
                                     <div class="dates">
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                        <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
+                                    <!-- <div class="dates">
+                                    </div> -->
                                 </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
+                                <div class="last-dates">
+                                     마감<br> 
+                                        <span>3</span>
+                                    일전
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!--  -->
-                    <div style="display: flex; margin-bottom: 10px;">
-                        <div class="service-items">
+                    <div>
+                        <!-- <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
                                     <div class="name">심봉사(SimBongSa)</div>
@@ -92,68 +101,32 @@
                                     <a class="button">지원 ></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
+                                    <div class="name">심봉사(SimBongSa)
+                                        <span class="cruit">[모집중]</span>
+                                    </div>
                                     <div class="title">서울시 환경정화 봉사자 모집</div>
                                     <div class="dates">
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                        <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
+                                    <!-- <div class="dates">
+                                    </div> -->
                                 </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--  -->
-                    <div style="display: flex; margin-bottom: 10px;">
-                        <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
+                                <div class="last-dates">
+                                     마감<br> 
+                                        <span>3</span>
+                                    일전
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!--  -->
-                    <div style="display: flex; margin-bottom: 10px;">
-                        <div class="service-items">
+                    <div>
+                        <!-- <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
                                     <div class="name">심봉사(SimBongSa)</div>
@@ -170,29 +143,32 @@
                                     <a class="button">지원 ></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
+                                    <div class="name">심봉사(SimBongSa)
+                                        <span class="cruit">[모집중]</span>
+                                    </div>
                                     <div class="title">서울시 환경정화 봉사자 모집</div>
                                     <div class="dates">
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                        <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
+                                    <!-- <div class="dates">
+                                    </div> -->
                                 </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
+                                <div class="last-dates">
+                                     마감<br> 
+                                        <span>3</span>
+                                    일전
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!--  -->
-                    <div style="display: flex; margin-bottom: 10px;">
-                        <div class="service-items">
+                    <div>
+                        <!-- <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
                                     <div class="name">심봉사(SimBongSa)</div>
@@ -209,8 +185,32 @@
                                     <a class="button">지원 ></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="service-items">
+                            <div class="service-items-wrapper">
+                                <div class="service-items-content">
+                                    <div class="name">심봉사(SimBongSa)
+                                        <span class="cruit">[모집중]</span>
+                                    </div>
+                                    <div class="title">서울시 환경정화 봉사자 모집</div>
+                                    <div class="dates">
+                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                        <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                    </div>
+                                    <!-- <div class="dates">
+                                    </div> -->
+                                </div>
+                                <div class="last-dates">
+                                     마감<br> 
+                                        <span>3</span>
+                                    일전
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <div>
+                        <!-- <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
                                     <div class="name">심봉사(SimBongSa)</div>
@@ -225,6 +225,28 @@
                                 <div class="items-buttons">
                                     <span class="cruit">모집중</span>
                                     <a class="button">지원 ></a>
+                                </div>
+                            </div>
+                        </div> -->
+                        <div class="service-items">
+                            <div class="service-items-wrapper">
+                                <div class="service-items-content">
+                                    <div class="name">심봉사(SimBongSa)
+                                        <span class="cruit">[모집중]</span>
+                                    </div>
+                                    <div class="title">서울시 환경정화 봉사자 모집</div>
+                                    <div class="dates">
+                                        <span class="dates-text">
+                                            [모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                        <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                    </div>
+                                    <!-- <div class="dates">
+                                    </div> -->
+                                </div>
+                                <div class="last-dates">
+                                     마감<br> 
+                                        <span>3</span>
+                                    일전
                                 </div>
                             </div>
                         </div>
