--- a/src/main/resources/static/css/volunteer-work/work.css
+++ b/src/main/resources/static/css/volunteer-work/work.css
@@ -11,6 +11,12 @@ body{
     min-width: 320px;
     font-size: 14px;
 }
+@media screen and (max-width: 767px) {
+    body {
+        /* font-size: 12px; */
+        line-height: 20px;
+    }
+}
 
 *{
     box-sizing: inherit;
