--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -19,17 +19,31 @@
     <!-- 전체 div -->
     <div class="main">
         <!-- 배너 -->
-        <div class="board-benner">
+        <!-- <div class="board-benner">
             <div class="benner-cover"></div>
-        </div>
+        </div> -->
+        
         <!-- 중간 메인 -->
         <div>
             <div class="main-container">
-                <section class="row">
+                <!-- <section class="row">
                     <div class="row-container">
                         <h1 class="row-text">심봉사와 함께 봉사할 심청을 찾습니다.</h1>
                     </div>
-                </section>
+                </section> -->
+                <div>
+                    <select>
+                        <option value="">전체보기</option>
+                        <option value="">서울특별시</option>
+                        <option value="">경기도</option>
+                        <option value="">충청북도</option>
+                        <option value="">충청남도</option>
+                        <option value="">경상남도</option>
+                        <option value="">경상북도</option>
+                        <option value="">전라남도</option>
+                        <option value="">전라북도</option>
+                    </select>
+                </div>
                 <section class="service-info">
                     <div class="items-info-layout">
                         <div class="items-buttons">
@@ -37,6 +51,32 @@
                             진행 중인 봉사 정보
                         </h4>
                             <button type="button" class="button">지원</button>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <div>
+                        
+                        <div class="service-items">
+                            <div class="service-items-wrapper">
+                                <div class="service-items-content">
+                                    <div class="name">
+                                        <span class="cruit">[모집중]</span>
+                                        [마감 <span class="last-date-text">3</span> 일전]
+                                    </div>
+                                    <div class="title">서울시 환경정화 봉사자 모집</div>
+                                    <div class="dates">
+                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
+                                        <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
+                                    </div>
+                                    <!-- <div class="dates">
+                                    </div> -->
+                                </div>
+                                <div class="last-dates">
+                                     마감<br> 
+                                        <span>3</span>
+                                    일전
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!--  -->
@@ -105,8 +145,9 @@
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)
+                                    <div class="name">
                                         <span class="cruit">[모집중]</span>
+                                        [마감 <span class="last-date-text">3</span> 일전]
                                     </div>
                                     <div class="title">서울시 환경정화 봉사자 모집</div>
                                     <div class="dates">
@@ -126,29 +167,13 @@
                     </div>
                     <!--  -->
                     <div>
-                        <!-- <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div> -->
+                        
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)
+                                    <div class="name">
                                         <span class="cruit">[모집중]</span>
+                                        [마감 <span class="last-date-text">3</span> 일전]
                                     </div>
                                     <div class="title">서울시 환경정화 봉사자 모집</div>
                                     <div class="dates">
@@ -168,66 +193,7 @@
                     </div>
                     <!--  -->
                     <div>
-                        <!-- <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div> -->
-                        <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)
-                                        <span class="cruit">[모집중]</span>
-                                    </div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                        <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
-                                </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--  -->
-                    <div>
-                        <!-- <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div> -->
+                        
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
