후원 상세페이지 일단 클론코딩까지 완료

--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -945,6 +945,25 @@ b, strong {
     .main-content-slider-banner-wrapper .main-content-swiper-container{
         padding: 0px;
     }
+
+    .move-arrow{
+        display: none;
+    }
+
+    .main-first-wrapper{
+        margin-top: 40px;
+        padding-bottom: 40px;
+        position: relative;
+    }
+
+    .main-first-list-layout{
+        margin: 0px;
+        padding: 0px;
+        list-style: none;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
 }
 
 @media (min-width: 640px) {
