--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -7,6 +7,7 @@
     <title>심봉사 | 활동 후기 상세페이지</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/community/review-detail.css">
+    <link rel="stylesheet" href="../../static/js/community/free-detail.js">
     <link rel="stylesheet" href="../../static/css/main/header.css">
 </head>
 <body>
@@ -275,7 +276,32 @@
 
                         <!-- 댓글 있을때 -->
                         <ul>
-                            <!--  -->
+                            <!-- 내가 쓴 댓글일 경우 -->
+                            <li class="comment-ok-list">
+                                <div class="comment-profile">
+                                    <div class="comment-profile-container">
+                                        <span class="comment-profile-span">
+                                            <img class="comment-profile-img" src="https://steadio.co/_next/image?url=https%3A%2F%2Fsteadio.imgix.net%2Fprofiles%2Fd7afcbbb-8376-4a2e-89a1-7d379ba76ea7%2FprofileImage%2F8220395f-c776-40bd-bced-f075a2315cdf.jpg%3Fauto%3Dformat%252Ccompress%26h%3D300%26lossless%3Dtrue%26w%3D300&w=1920&q=75">
+                                        </span>
+                                    </div>
+                                </div>
+                                <div style="width: 100%;">
+                                    <div class="comment-user">
+                                        <div class="comment-user-name">서현</div>
+                                        <button type="button" class="x-btn">
+                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="x-btn-svg">
+                                                <path d="M5.707 5.707a1 1 0 0 0 0 1.414l4.95 4.95-4.95 4.95a1 1 0 1 0 1.414 1.414l4.95-4.95 4.95 4.95a1 1 0 0 0 1.414-1.414l-4.95-4.95 4.95-4.95a1 1 0 1 0-1.414-1.414l-4.95 4.95-4.95-4.95a1 1 0 0 0-1.414 0Z"></path>
+                                            </svg>
+                                        </button>
+                                    </div>
+                                    <div style="flex: 0 0 auto; height: 5px;"></div>
+                                    <p class="comment-contant"></p>
+                                    좋은 활동 후기보고 갑니다.
+                                    <div style="flex: 0 0 auto; height: 8px;"></div>
+                                    <span class="comment-day">1일 전</span>
+                                </div>
+                            </li>
+                            <!-- 다른 사람들 댓글 x버튼 없음 -->
                             <li class="comment-ok-list">
                                 <div class="comment-profile">
                                     <div class="comment-profile-container">
